editable span overflow fix

--- a/Distraction Shield/optionsPage/options.css
+++ b/Distraction Shield/optionsPage/options.css
@@ -43,6 +43,13 @@ body {
     overflow:visible;
 }
 
+.editable-span {
+    display:block;
+    max-width:200px;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 /* ---------- ---------- table ---------- ---------- */
 
 .highlight {
